# groqcli

./: .gitignore  README.md  pyproject.toml
groqcli/: __init__.py  cli.py  defaults.py  foo.py  groqcli.py
